# openrelik-worker-jq

./: Dockerfile  README.md  bootstrap.sh  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: python-test.yml
src/: tasks.py
tests/: test_tasks.py
