[tool.poetry]
name = "openrelik-worker-TEMPLATEWORKERNAME"
version = "0.1.0"
description = "Description of the worker"
authors = ["YOUR NAME <email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
celery = { extras = ["redis"], version = "^5.4.0" }
openrelik-worker-common = "^0.10.0"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
